Update public to output generated at 8bc7a0b

--- a/media.html
+++ b/media.html
@@ -32,7 +32,7 @@
 				</ul>
 		</ul>
 	</nav>
-	<main id="media" class="site-content content">
+	<main id="media" class="site-content content media">
 		<section>
 			<h2>Screenshots</h2>
 			<figure class="screenshot">
