--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 			<h2>Latest releases</h2>
 			<ul>
 				<li>
+					<span class="date">22/05/2022</span>
+					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.66-beta1">CorsixTH v0.66-beta1</a></span>
+				</li>
+				<li>
 					<span class="date">17/07/2021</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.65.1">CorsixTH 0.65.1 Hotfix</a></span>
 				</li>
@@ -64,10 +68,6 @@
 				<li>
 					<span class="date">24/05/2021</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.65-beta1">CorsixTH 0.65-beta1</a></span>
-				</li>
-				<li>
-					<span class="date">15/06/2020</span>
-					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.64">CorsixTH 0.64 Release</a></span>
 				</li>
 			</ul>
 			<a href="https://github.com/CorsixTH/CorsixTH/releases" class="action">All release notes</a>
