Update public to output generated at 3560f02

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 			<h2>Latest releases</h2>
 			<ul>
 				<li>
+					<span class="date">26/06/2022</span>
+					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.66">CorsixTH 0.66</a></span>
+				</li>
+				<li>
 					<span class="date">19/06/2022</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.66-rc1">CorsixTH v0.66-rc1</a></span>
 				</li>
@@ -64,10 +68,6 @@
 				<li>
 					<span class="date">17/07/2021</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.65.1">CorsixTH 0.65.1 Hotfix</a></span>
-				</li>
-				<li>
-					<span class="date">19/06/2021</span>
-					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.65">CorsixTH 0.65 Release</a></span>
 				</li>
 			</ul>
 			<a href="https://github.com/CorsixTH/CorsixTH/releases" class="action">All release notes</a>
