--- a/download.html
+++ b/download.html
@@ -54,7 +54,7 @@
 		</section>
 	</main>
 	<footer id="footer" class="site-footer">
-		<p>© 2021 CorsixTH</p>
+		<p>© 2021-2022 CorsixTH</p>
 	</footer>
 	<script src="script.js"></script>
 </body>
