--- a/media.html
+++ b/media.html
@@ -119,7 +119,7 @@
 		</section>
 	</main>
 	<footer id="footer" class="site-footer">
-		<p>© 2021 CorsixTH</p>
+		<p>© 2021-2022 CorsixTH</p>
 	</footer>
 	<script src="script.js"></script>
 </body>
