Update public to output generated at dfcf279

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 			<h2>Latest releases</h2>
 			<ul>
 				<li>
+					<span class="date">30/07/2023</span>
+					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.67-rc1">CorsixTH 0.67 Release Candidate 1</a></span>
+				</li>
+				<li>
 					<span class="date">08/07/2023</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.67-beta1">CorsixTH 0.67 Beta 1</a></span>
 				</li>
@@ -64,10 +68,6 @@
 				<li>
 					<span class="date">05/06/2022</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.66-beta2">CorsixTH v0.66-beta2</a></span>
-				</li>
-				<li>
-					<span class="date">22/05/2022</span>
-					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.66-beta1">CorsixTH v0.66-beta1</a></span>
 				</li>
 			</ul>
 			<a href="https://github.com/CorsixTH/CorsixTH/releases" class="action">All release notes</a>
