Update public to output generated at 8206339

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 			<h2>Latest releases</h2>
 			<ul>
 				<li>
+					<span class="date">05/09/2024</span>
+					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.68.0-beta1">CorsixTH 0.68.0 Beta 1</a></span>
+				</li>
+				<li>
 					<span class="date">12/08/2023</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.67">CorsixTH 0.67</a></span>
 				</li>
@@ -64,10 +68,6 @@
 				<li>
 					<span class="date">26/06/2022</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.66">CorsixTH 0.66</a></span>
-				</li>
-				<li>
-					<span class="date">19/06/2022</span>
-					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.66-rc1">CorsixTH v0.66-rc1</a></span>
 				</li>
 			</ul>
 			<a href="https://github.com/CorsixTH/CorsixTH/releases" class="action">All release notes</a>
