--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 			<h2>Latest releases</h2>
 			<ul>
 				<li>
+					<span class="date">13/10/2024</span>
+					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.68.0">CorsixTH 0.68.0</a></span>
+				</li>
+				<li>
 					<span class="date">28/09/2024</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.68.0-rc2">CorsixTH 0.68.0 Release Candidate 2</a></span>
 				</li>
@@ -64,10 +68,6 @@
 				<li>
 					<span class="date">12/08/2023</span>
 					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.67">CorsixTH 0.67</a></span>
-				</li>
-				<li>
-					<span class="date">30/07/2023</span>
-					<span class="title"><a href="https://github.com/CorsixTH/CorsixTH/releases/tag/v0.67-rc1">CorsixTH 0.67 Release Candidate 1</a></span>
 				</li>
 			</ul>
 			<a href="https://github.com/CorsixTH/CorsixTH/releases" class="action">All release notes</a>
